objects/Milestone__c.object
<CustomObject>
    <description>An object to record Milestones that can be signed by the PM Agent for revenue recognition</description>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>Milestone_Code_Lookup__r.Account_Code__c</formula>
        <label>Revenue Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>BU values</description>
        <label>BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Border_BU__c</fullName>
        <label>Cross Border BU</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AD1</fullName>
                </value>
                <value>
                    <fullName>AU1</fullName>
                </value>
                <value>
                    <fullName>BE5</fullName>
                </value>
                <value>
                    <fullName>CA1</fullName>
                </value>
                <value>
                    <fullName>CH1</fullName>
                </value>
                <value>
                    <fullName>CN1</fullName>
                </value>
                <value>
                    <fullName>DE5</fullName>
                </value>
                <value>
                    <fullName>DK1</fullName>
                </value>
                <value>
                    <fullName>FI1</fullName>
                </value>
                <value>
                    <fullName>FR5</fullName>
                </value>
                <value>
                    <fullName>HK1</fullName>
                </value>
                <value>
                    <fullName>IN1</fullName>
                </value>
                <value>
                    <fullName>IT1</fullName>
                </value>
                <value>
                    <fullName>ME1</fullName>
                </value>
                <value>
                    <fullName>NL5</fullName>
                </value>
                <value>
                    <fullName>NO1</fullName>
                </value>
                <value>
                    <fullName>NZ1</fullName>
                </value>
                <value>
                    <fullName>PH1</fullName>
                </value>
                <value>
                    <fullName>SA5</fullName>
                </value>
                <value>
                    <fullName>SE1</fullName>
                </value>
                <value>
                    <fullName>SG1</fullName>
                </value>
                <value>
                    <fullName>UK1</fullName>
                </value>
                <value>
                    <fullName>US5</fullName>
                </value>
                <value>
                    <fullName>ZA1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Enables_Product_Subscription__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enables Product Subscription</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FC_Sign_Off_Date__c</fullName>
        <label>FC Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FC_Sign_Off_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A user look up field</description>
        <label>FC Sign Off Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FC_Sign_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Financial Controller approval only</inlineHelpText>
        <label>FC Sign Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Period_Closed__c</fullName>
        <formula>Milestone_Period__r.Financial_Period_Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMCode__c</fullName>
        <formula>Service__r.StockKeepingUnit</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Code__c</fullName>
        <formula>Milestone_Code_Lookup__r.IM_code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM Code (Legacy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IM_Lookup__c</fullName>
        <formula>Milestone_Code_Lookup__r.IM_lookup__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IM Lookup (Legacy)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Project_Manager__c</fullName>
        <description>This field is used for system use to check if current logged in user is Project Manager of the concerned milestone</description>
        <formula>OR(($User.Id = Project__r.Project_Manager__c),($User.Id =  Project__r.Project_Co_ordinator__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Project Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Logged_In_user__c</fullName>
        <formula>Milestone_Owner__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Milestone_Code2__c</fullName>
        <label>Milestone Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Service_Type2__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Exercise Design</fullName>
                </value>
                <value>
                    <fullName>Delivery of Assessment</fullName>
                </value>
                <value>
                    <fullName>Outcome Design</fullName>
                </value>
                <value>
                    <fullName>Content Creation and data collection</fullName>
                </value>
                <value>
                    <fullName>Report and Feedback</fullName>
                </value>
                <value>
                    <fullName>Assessor Training</fullName>
                </value>
                <value>
                    <fullName>Delivery, Report and Feedback</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Feedback Session</fullName>
                </value>
                <value>
                    <fullName>Workshop Design</fullName>
                </value>
                <value>
                    <fullName>Workshop Delivery</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Recommendations Report</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Competency Framework</fullName>
                </value>
                <value>
                    <fullName>Content Creation</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content (incl localisation)</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Script</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Mock-up</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Mappings</fullName>
                </value>
                <value>
                    <fullName>Client Sign-Off of Equations, Norms and Rulebase</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off IT Build</fullName>
                </value>
                <value>
                    <fullName>Data Audit</fullName>
                </value>
                <value>
                    <fullName>Presentation to Client</fullName>
                </value>
                <value>
                    <fullName>Unit Exchange for Consulting</fullName>
                </value>
                <value>
                    <fullName>Unit Exchange for Training</fullName>
                </value>
                <value>
                    <fullName>Intra SHL Purchase of Services</fullName>
                </value>
                <value>
                    <fullName>Initial Data Collection</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Draft Content</fullName>
                </value>
                <value>
                    <fullName>Client Sign Off Content Build</fullName>
                </value>
                <value>
                    <fullName>Complete Data Collection</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Code_Lookup__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone Code Lookup</label>
        <referenceTo>Milestone_Code__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Description__c</fullName>
        <label>Milestone Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Milestone_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Owner</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>User.Is_Project_Manager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Is_Project_Co_ordinator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Period_Date__c</fullName>
        <formula>Milestone_Period__r.Financial_Period_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Milestone Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Milestone_Period__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Milestone Period</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Milestone_Period__c.Financial_Period_Closed__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$User.Id</field>
                <operation>equals</operation>
                <value>005Q4000000BRRV</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Milestone_Period__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Milestone_Risk__c</fullName>
        <label>Milestone Risk</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Milestone_Sign_Off_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Milestone Sign Off Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>CASE( MONTH(Milestone_Period__r.Financial_Period_Date__c ) , 1, &apos;Jan&apos;, 2, &apos;Feb&apos;,3,&apos;Mar&apos;,4,&apos;Apr&apos;,5,&apos;May&apos;,6,&apos;Jun&apos;,7,&apos;Jul&apos;,8,&apos;Aug&apos;,9,&apos;Sep&apos;,10,&apos;Oct&apos;,11,&apos;Nov&apos;,&apos;Dec&apos;)</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PM_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Practice_Area__c</fullName>
        <label>Practice Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Advisory Services</fullName>
                </value>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Service_Type2__c</fullName>
        <label>Service Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>360</fullName>
                </value>
                <value>
                    <fullName>1:1 Assessment</fullName>
                </value>
                <value>
                    <fullName>1:1 Development</fullName>
                </value>
                <value>
                    <fullName>Assessment Centre</fullName>
                </value>
                <value>
                    <fullName>Coding Simulation</fullName>
                </value>
                <value>
                    <fullName>Competencies</fullName>
                </value>
                <value>
                    <fullName>Custom Report</fullName>
                </value>
                <value>
                    <fullName>Development Centre</fullName>
                </value>
                <value>
                    <fullName>Digital Training</fullName>
                </value>
                <value>
                    <fullName>Experiences</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>JFA - Tailor</fullName>
                </value>
                <value>
                    <fullName>Job Analysis</fullName>
                </value>
                <value>
                    <fullName>Localization</fullName>
                </value>
                <value>
                    <fullName>Multimedia</fullName>
                </value>
                <value>
                    <fullName>Product Review</fullName>
                </value>
                <value>
                    <fullName>ROI</fullName>
                </value>
                <value>
                    <fullName>SJT &amp; RJP</fullName>
                </value>
                <value>
                    <fullName>Smart Interview</fullName>
                </value>
                <value>
                    <fullName>Solution Client Support</fullName>
                </value>
                <value>
                    <fullName>Talent Insight Dashboard</fullName>
                </value>
                <value>
                    <fullName>Talent Review / Analytics</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Video Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product2.Revenue_Category__c</field>
                <operation>equals</operation>
                <value>Professional Services</value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Milestones</relationshipLabel>
        <relationshipName>Milestones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Milestone Sign Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Superuser_BU__c</fullName>
        <formula>CONTAINS($User.Superuser_BU__c, TEXT(BU__c))</formula>
        <label>Superuser BU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Milestone_Value__c</fullName>
        <formula>Project__r.Milestones_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Milestone Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_OrderProduct_Value__c</fullName>
        <formula>Project__r.Total_Orderline_Value_RollUp__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total OrderProduct Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Track_change__c</fullName>
        <label>Track change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Track_changes_history__c</fullName>
        <label>Track changes history</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>Text(YEAR( Milestone_Period__r.Financial_Period_Date__c ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Milestone</label>
    <listViews>
        <fullName>All_Milestones</fullName>
        <columns>Milestone_Period__c</columns>
        <columns>Milestone_Description__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Service_Type2__c</columns>
        <columns>Milestone_Code_Lookup__c</columns>
        <columns>Milestone_Code2__c</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Is_Signed__c</columns>
        <columns>Financial_Period_Closed__c</columns>
        <columns>BU__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Milestones</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Milestones_from_go_live</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>BU__c</columns>
        <columns>Amount__c</columns>
        <columns>Is_Signed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>7/8/2013 12:00 AM</value>
        </filters>
        <label>Milestones from go live</label>
    </listViews>
    <listViews>
        <fullName>My_Milestones2</fullName>
        <columns>Milestone_Description__c</columns>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>Service_Type2__c</columns>
        <columns>Milestone_Period__c</columns>
        <columns>Milestone_Code_Lookup__c</columns>
        <columns>Milestone_Code2__c</columns>
        <columns>Project__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Is_Signed__c</columns>
        <columns>Financial_Period_Closed__c</columns>
        <columns>BU__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Signed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Milestone_Period__c</field>
            <operation>equals</operation>
            <value>SE1-2013-Nov,SE1-2013-dec</value>
        </filters>
        <label>My Open Milestones - 2013</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Milestones</fullName>
        <columns>Project__c</columns>
        <columns>Milestone_Period_Date__c</columns>
        <columns>Milestone_Period__c</columns>
        <columns>NAME</columns>
        <columns>Milestone_Description__c</columns>
        <columns>Amount__c</columns>
        <columns>Is_Signed__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Is_Signed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Milestone_Period_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>My Open Milestones</label>
    </listViews>
    <nameField>
        <displayFormat>MS{00000}</displayFormat>
        <label>Milestone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AmountMustBeNegativeIfIntraSHLType</fullName>
        <active>false</active>
        <description>Add a new rule so that if the cross border BU on the milestone has a value, the amount must be set to negative.</description>
        <errorConditionFormula>AND(ISPICKVAL( Service_Type2__c ,&quot;Intra SHL Purchase of Services&quot;), Amount__c  &gt;= 0)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>If the service type is Intra SHL Purchase of Services the amount must be set to negative.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotAddMilestones</fullName>
        <active>true</active>
        <description>Prevent Users from adding Milestones to Projects where the related Opportunity is Closed Lost</description>
        <errorConditionFormula>ISPICKVAL(Project__r.Opportunity__r.StageName , &quot;Closed Lost&quot;)</errorConditionFormula>
        <errorMessage>You cannot add Milestones to Projects where the related Opportunity is Closed Lost</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CrossBUMandatoryWhenIntraSHLServiceType</fullName>
        <active>false</active>
        <description>The Cross Border BU field is mandatory when the Service Type is set to Intra SHL Purchase of Services</description>
        <errorConditionFormula>AND(ISPICKVAL( Service_Type2__c ,&quot;Intra SHL Purchase of Services&quot;),ISBLANK(TEXT( Cross_Border_BU__c)))</errorConditionFormula>
        <errorDisplayField>Cross_Border_BU__c</errorDisplayField>
        <errorMessage>The Cross Border BU field is mandatory when the Service Type is Intra SHL Purchase of Services</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CurrencySameAsProjectCurrency</fullName>
        <active>true</active>
        <description>Currency must be the same as the project currency.</description>
        <errorConditionFormula>IF( TEXT(CurrencyIsoCode) != TEXT( Project__r.CurrencyIsoCode) ,true, false)</errorConditionFormula>
        <errorDisplayField>CurrencyIsoCode</errorDisplayField>
        <errorMessage>PM Agent - Currency must be the same as the project currency.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_Owner_fields_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
OR(ISCHANGED(  Project__c ),ISCHANGED( BU__c ),ISCHANGED( Amount__c )),
AND(($User.Id != Project__r.Project_Co_ordinator__c ),
($User.Id != Project__r.Project_Manager__c ))
)</errorConditionFormula>
        <errorMessage>Only Project Manager or Project Co-ordinator  can edit Project, BU and Amount Fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NewFinanceProfileCanChangeOnly3Fields</fullName>
        <active>false</active>
        <description>Finance profile or group can only edit the 3 fields on the milestone and no others.</description>
        <errorConditionFormula>IF($Profile.Name !=&apos;New Finance&apos;,false,IF(OR(ISCHANGED(  Project__c),ISCHANGED(Milestone_Period__c)),true,NOT(OR(ISCHANGED( FC_Sign_Off__c ),ISCHANGED(FC_Sign_Off_Date__c),ISCHANGED(FC_Sign_Off_Name__c)))))</errorConditionFormula>
        <errorMessage>New Finance profile can only edit the &apos;FC Sign Off&apos;,&apos;FC Sign Off Date&apos;,&apos;FC Sign Off Name&apos; fields on the milestone and no others.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoChangesIfPeriodClosed</fullName>
        <active>true</active>
        <description>PM agent is not allowed to edit or remove signed milestone lines in closed financial period.</description>
        <errorConditionFormula>AND(
    NOT($Permission.Modify_Milestone_if_Financial_Period_Closed),
    Milestone_Period__r.Financial_Period_Closed__c,
    Is_Signed__c
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>Any kind of update is not allowed on milestones when financial period is closed and milestone signed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoChangesUnlessProjMan</fullName>
        <active>false</active>
        <description>PM Agent must be same as the Proj Manager field on project.</description>
        <errorConditionFormula>IF(OR($User.Id==Project__r.Project_Manager__c,$User.Id==Project__r.Project_Co_ordinator__c,$User.Id== Milestone_Owner__c ,$Profile.Name ==&apos;System Administrator&apos;),False,If($Profile.Name ==&apos;New Finance&apos;,false,true))</errorConditionFormula>
        <errorMessage>You can only create or edit milestones if you are the Project Manager OR the Project co-ordinator of the project or the Milestone Owner.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoSignMilestoneTotalEqualOrderLineValue</fullName>
        <active>false</active>
        <description>The milestones total value must = the order product value.</description>
        <errorConditionFormula>IF(
AND(
Is_Signed__c,
NOT(ISNEW()),
ROUND((IF(ISNEW(),Project__r.Milestones_Value__c,Project__r.Milestones_Value__c-PRIORVALUE(Amount__c))+Amount__c),2) != ROUND((Project__r.Total_Orderline_Value_RollUp__c)
,2) )
,true, false
)</errorConditionFormula>
        <errorDisplayField>Amount__c</errorDisplayField>
        <errorMessage>You can only sign a milestone if the total milestones value = the order product value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoSigningIfNoOrderLine</fullName>
        <active>true</active>
        <description>A validation rule to restrict the PM Agent - The PM Agent is not allowed to sign or remove milestone entries when there is no Orderline Number linked to the project.</description>
        <errorConditionFormula>IF( AND(ISBLANK( Project__r.Order_Products_Count__c ), Is_Signed__c ) ,true,false)</errorConditionFormula>
        <errorMessage>The milestone cannot be signed as there are no Order Products linked to the project.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Practice_Area_Required_for_US5</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(BU__c,&quot;US5&quot;),ISPICKVAL(Practice_Area__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Practice_Area__c</errorDisplayField>
        <errorMessage>Please provide a practice area for this milestone</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjManCanNotChange3Fields</fullName>
        <active>false</active>
        <description>Project Manager Or Project co-ordinator can not edit &apos;FC Sign Off&apos;,&apos;FC Sign Off Date&apos;,and &apos;FC Sign Off Name&apos; fields on the milestone.</description>
        <errorConditionFormula>IF( OR(Project__r.Project_Manager__c ==$User.Id,Project__r.Project_Co_ordinator__c ==$User.Id),
IF( ISNEW(),OR( FC_Sign_Off__c,NOT(ISBLANK(FC_Sign_Off_Date__c)),NOT(ISBLANK(FC_Sign_Off_Name__c))),
	        OR(ISCHANGED( FC_Sign_Off__c ),ISCHANGED(FC_Sign_Off_Date__c),ISCHANGED(FC_Sign_Off_Name__c)) ),False)</errorConditionFormula>
        <errorMessage>Project Manager OR Project co-ordinator can not edit &apos;FC Sign Off&apos;,&apos;FC Sign Off Date&apos;,and &apos;FC Sign Off Name&apos; fields on the milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectCCYandOrderCCYEqual</fullName>
        <active>true</active>
        <description>user can only edit a milestone when the currency of the project equals the currency of the opportunity</description>
        <errorConditionFormula>AND( NOT(ISBLANK( Project__r.Opportunity__c )), TEXT(Project__r.CurrencyIsoCode) != TEXT( Project__r.Opportunity__r.CurrencyIsoCode ))</errorConditionFormula>
        <errorMessage>You cannot edit a milestone unless the project and opportunity currency values match.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ProjectManagerMandatoryToSign</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Is_Signed__c , ISBLANK( Project__r.Project_Manager__c ) )</errorConditionFormula>
        <errorDisplayField>Is_Signed__c</errorDisplayField>
        <errorMessage>Please add Project Manager before signing the milestone.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Same_Milestone_And_Milestone_Period_BU</fullName>
        <active>true</active>
        <description>To validate that the Milestone BU should be same as Milestone Period&apos;s BU.</description>
        <errorConditionFormula>(TEXT( BU__c)  &lt;&gt;  TEXT(Milestone_Period__r.BU__c))  || 
(TEXT( BU__c)  &lt;&gt;  TEXT( Project__r.LBU__c))</errorConditionFormula>
        <errorDisplayField>BU__c</errorDisplayField>
        <errorMessage>Milestone BU should match the related Project BU AND Milestone Period BU. Please choose the correct BU.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_On_Track_Change</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
		OR(ISCHANGED( Track_change__c ),AND(PRIORVALUE(Track_change__c )=&apos;&apos;,Track_change__c !=&apos;&apos;)),
		AND(($User.Id != Project__r.Project_Co_ordinator__c ),
			($User.Id != Project__r.Project_Manager__c ))
	  )</errorConditionFormula>
        <errorMessage>Only Project Co-ordinator and Project Manager can edit the Track Change Filed</errorMessage>
    </validationRules>
</CustomObject>